Split the NASA data in train and test sets

--- a/notebooks/Convert NASA data to Orion format.ipynb
+++ b/notebooks/Convert NASA data to Orion format.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,27 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_df(signal):\n",
-    "    train = np.load('data/train/' + signal)\n",
-    "    test = np.load('data/test/' + signal)\n",
-    "    value = np.concatenate([train[:, 0], test[:, 0]])\n",
-    "    index = np.array(range(len(value)))\n",
+    "def build_df(data, start=0):\n",
+    "    index = np.array(range(start, start + len(data)))\n",
     "    timestamp = index * 21600 + 1222819200\n",
     "    \n",
-    "    data = pd.DataFrame({'timestamp': timestamp, 'value': value})\n",
-    "    \n",
-    "    return data\n",
+    "    return pd.DataFrame({'timestamp': timestamp, 'value': data[:, 0]})\n",
     "\n",
-    "data = build_df('S-1.npy')"
+    "data = build_df(np.load('data/train/S-1.npy'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +177,7 @@
        "4  1222905600 -0.370746"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,28 +204,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "for signal in train_signals:\n",
-    "    data = build_df(signal)\n",
     "    name = signal[:-4]\n",
-    "    data.to_csv('csv/' + name + '.csv', index=False)"
+    "    train_np = np.load('data/train/' + signal)\n",
+    "    test_np = np.load('data/test/' + signal)\n",
+    "    \n",
+    "    data = build_df(np.concatenate([train_np, test_np]))\n",
+    "    data.to_csv('csv/' + name + '.csv', index=False)\n",
+    "    \n",
+    "    train = build_df(train_np)\n",
+    "    train.to_csv('csv/' + name + '-train.csv', index=False)\n",
+    "    \n",
+    "    test = build_df(test_np, start=len(train))\n",
+    "    test.to_csv('csv/' + name + '-test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = pd.read_csv('csv/S-1.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nasa = pd.read_csv('csv/S-1.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,13 +301,325 @@
        "4  1222905600 -0.370746"
       ]
      },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10149, 2)"
+      ]
+     },
      "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nasa.head()"
+    "s1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_train = pd.read_csv('csv/S-1-train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1222819200</td>\n",
+       "      <td>-0.366359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1222840800</td>\n",
+       "      <td>-0.394108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1222862400</td>\n",
+       "      <td>0.403625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1222884000</td>\n",
+       "      <td>-0.362759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1222905600</td>\n",
+       "      <td>-0.370746</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    timestamp     value\n",
+       "0  1222819200 -0.366359\n",
+       "1  1222840800 -0.394108\n",
+       "2  1222862400  0.403625\n",
+       "3  1222884000 -0.362759\n",
+       "4  1222905600 -0.370746"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2813</th>\n",
+       "      <td>1283580000</td>\n",
+       "      <td>-0.365308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2814</th>\n",
+       "      <td>1283601600</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2815</th>\n",
+       "      <td>1283623200</td>\n",
+       "      <td>-0.341357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2816</th>\n",
+       "      <td>1283644800</td>\n",
+       "      <td>-0.392546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2817</th>\n",
+       "      <td>1283666400</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       timestamp     value\n",
+       "2813  1283580000 -0.365308\n",
+       "2814  1283601600  1.000000\n",
+       "2815  1283623200 -0.341357\n",
+       "2816  1283644800 -0.392546\n",
+       "2817  1283666400  1.000000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_train.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2818, 2)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_test = pd.read_csv('csv/S-1-test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1283688000</td>\n",
+       "      <td>0.028893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1283709600</td>\n",
+       "      <td>0.403040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1283731200</td>\n",
+       "      <td>-0.366585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1283752800</td>\n",
+       "      <td>-0.369710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1283774400</td>\n",
+       "      <td>-0.386455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    timestamp     value\n",
+       "0  1283688000  0.028893\n",
+       "1  1283709600  0.403040\n",
+       "2  1283731200 -0.366585\n",
+       "3  1283752800 -0.369710\n",
+       "4  1283774400 -0.386455"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7331, 2)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_test.shape"
    ]
   }
  ],
