--- a/notebooks/Pipeline Scoring Example.ipynb
+++ b/notebooks/Pipeline Scoring Example.ipynb
@@ -121,8 +121,10 @@
    ],
    "source": [
     "from orion.data import load_signal\n",
-    "data = load_signal('S-1')\n",
-    "data.head()"
+    "\n",
+    "train = load_signal('S-1-train')\n",
+    "test = load_signal('S-1-test')\n",
+    "train.head()"
    ]
   },
   {
@@ -142,13 +144,94 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 2054 samples, validate on 514 samples\n",
+      "Epoch 1/35\n",
+      "2054/2054 [==============================] - 12s 6ms/step - loss: 0.1063 - mean_squared_error: 0.1063 - val_loss: 0.1073 - val_mean_squared_error: 0.1073\n",
+      "Epoch 2/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1015 - mean_squared_error: 0.1015 - val_loss: 0.1080 - val_mean_squared_error: 0.1080\n",
+      "Epoch 3/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1020 - mean_squared_error: 0.1020 - val_loss: 0.1057 - val_mean_squared_error: 0.1057\n",
+      "Epoch 4/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1015 - mean_squared_error: 0.1015 - val_loss: 0.1053 - val_mean_squared_error: 0.1053\n",
+      "Epoch 5/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1005 - mean_squared_error: 0.1005 - val_loss: 0.1059 - val_mean_squared_error: 0.1059\n",
+      "Epoch 6/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1002 - mean_squared_error: 0.1002 - val_loss: 0.1045 - val_mean_squared_error: 0.1045\n",
+      "Epoch 7/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1003 - mean_squared_error: 0.1003 - val_loss: 0.1036 - val_mean_squared_error: 0.1036\n",
+      "Epoch 8/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0988 - mean_squared_error: 0.0988 - val_loss: 0.1027 - val_mean_squared_error: 0.1027\n",
+      "Epoch 9/35\n",
+      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0986 - mean_squared_error: 0.0986 - val_loss: 0.1015 - val_mean_squared_error: 0.1015\n",
+      "Epoch 10/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0969 - mean_squared_error: 0.0969 - val_loss: 0.1007 - val_mean_squared_error: 0.1007\n",
+      "Epoch 11/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0962 - mean_squared_error: 0.0962 - val_loss: 0.1004 - val_mean_squared_error: 0.1004\n",
+      "Epoch 12/35\n",
+      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0967 - mean_squared_error: 0.0967 - val_loss: 0.0998 - val_mean_squared_error: 0.0998\n",
+      "Epoch 13/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0962 - mean_squared_error: 0.0962 - val_loss: 0.0999 - val_mean_squared_error: 0.0999\n",
+      "Epoch 14/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0958 - mean_squared_error: 0.0958 - val_loss: 0.0996 - val_mean_squared_error: 0.0996\n",
+      "Epoch 15/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0952 - mean_squared_error: 0.0952 - val_loss: 0.0990 - val_mean_squared_error: 0.0990\n",
+      "Epoch 16/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0956 - mean_squared_error: 0.0956 - val_loss: 0.1005 - val_mean_squared_error: 0.1005\n",
+      "Epoch 17/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0957 - mean_squared_error: 0.0957 - val_loss: 0.0998 - val_mean_squared_error: 0.0998\n",
+      "Epoch 18/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0955 - mean_squared_error: 0.0955 - val_loss: 0.0986 - val_mean_squared_error: 0.0986\n",
+      "Epoch 19/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0939 - mean_squared_error: 0.0939 - val_loss: 0.0974 - val_mean_squared_error: 0.0974\n",
+      "Epoch 20/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0932 - mean_squared_error: 0.0932 - val_loss: 0.0987 - val_mean_squared_error: 0.0987\n",
+      "Epoch 21/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0944 - mean_squared_error: 0.0944 - val_loss: 0.0961 - val_mean_squared_error: 0.0961\n",
+      "Epoch 22/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0933 - mean_squared_error: 0.0933 - val_loss: 0.1008 - val_mean_squared_error: 0.1008\n",
+      "Epoch 23/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0939 - mean_squared_error: 0.0939 - val_loss: 0.0972 - val_mean_squared_error: 0.0972\n",
+      "Epoch 24/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0913 - mean_squared_error: 0.0913 - val_loss: 0.0958 - val_mean_squared_error: 0.0958\n",
+      "Epoch 25/35\n",
+      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0913 - mean_squared_error: 0.0913 - val_loss: 0.0955 - val_mean_squared_error: 0.0955\n",
+      "Epoch 26/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0910 - mean_squared_error: 0.0910 - val_loss: 0.0944 - val_mean_squared_error: 0.0944\n",
+      "Epoch 27/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0890 - mean_squared_error: 0.0890 - val_loss: 0.0948 - val_mean_squared_error: 0.0948\n",
+      "Epoch 28/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0895 - mean_squared_error: 0.0895 - val_loss: 0.0898 - val_mean_squared_error: 0.0898\n",
+      "Epoch 29/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0873 - mean_squared_error: 0.0873 - val_loss: 0.0910 - val_mean_squared_error: 0.0910\n",
+      "Epoch 30/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0875 - mean_squared_error: 0.0875 - val_loss: 0.0881 - val_mean_squared_error: 0.0881\n",
+      "Epoch 31/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0872 - mean_squared_error: 0.0872 - val_loss: 0.0879 - val_mean_squared_error: 0.0879\n",
+      "Epoch 32/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0847 - mean_squared_error: 0.0847 - val_loss: 0.0868 - val_mean_squared_error: 0.0868\n",
+      "Epoch 33/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0858 - mean_squared_error: 0.0858 - val_loss: 0.0857 - val_mean_squared_error: 0.0857\n",
+      "Epoch 34/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0834 - mean_squared_error: 0.0834 - val_loss: 0.0839 - val_mean_squared_error: 0.0839\n",
+      "Epoch 35/35\n",
+      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0829 - mean_squared_error: 0.0829 - val_loss: 0.0857 - val_mean_squared_error: 0.0857\n",
+      "2568/2568 [==============================] - 3s 1ms/step\n",
+      "7081/7081 [==============================] - 7s 1ms/step\n"
      ]
     },
     {
@@ -180,21 +263,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>1222840800</td>\n",
-       "      <td>0.214429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>1222884000</td>\n",
-       "      <td>0.190488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1398060000</td>\n",
-       "      <td>1399485600</td>\n",
-       "      <td>0.228909</td>\n",
+       "      <td>1394323200</td>\n",
+       "      <td>1399701600</td>\n",
+       "      <td>0.673494</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,9 +273,7 @@
       ],
       "text/plain": [
        "        start         end     score\n",
-       "0  1222840800  1222840800  0.214429\n",
-       "1  1222884000  1222884000  0.190488\n",
-       "2  1398060000  1399485600  0.228909"
+       "0  1394323200  1399701600  0.673494"
       ]
      },
      "execution_count": 3,
@@ -217,7 +286,7 @@
     "\n",
     "pipeline_path = '../orion/pipelines/lstm_dynamic_threshold.json'\n",
     "\n",
-    "anomalies = analyze(pipeline_path, data)\n",
+    "anomalies = analyze(pipeline_path, train, test)\n",
     "anomalies"
    ]
   },
@@ -306,7 +375,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9624556562869531"
+       "0.972987721691678"
       ]
      },
      "execution_count": 6,
@@ -316,27 +385,27 @@
    ],
    "source": [
     "from orion.metrics import accuracy_score, f1_score\n",
-    "accuracy_score(known_anomalies, anomalies, data)"
+    "accuracy_score(known_anomalies, anomalies, test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2573099415204679"
+       "0.7155172413793103"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f1_score(known_anomalies, anomalies, data)"
+    "f1_score(known_anomalies, anomalies, test)"
    ]
   }
  ],
@@ -356,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
