rename to hyperparameters

--- a/notebooks/tulog/Tulog.ipynb
+++ b/notebooks/tulog/Tulog.ipynb
@@ -1024,17 +1024,17 @@
     }
    ],
    "source": [
-    "from model import parameters\n",
+    "from model import hyperparameters\n",
     "from orion.primitives.tadgan import TadGAN\n",
     "\n",
-    "parameters[\"epochs\"] = 100\n",
-    "parameters[\"shape\"] = (100, 1) # based on the window size\n",
-    "parameters[\"optimizer\"] = \"keras.optimizers.Adam\"\n",
-    "parameters[\"learning_rate\"] = 0.0005\n",
-    "parameters[\"latent_dim\"] = 20\n",
-    "parameters[\"batch_size\"] = 64\n",
+    "hyperparameters[\"epochs\"] = 100\n",
+    "hyperparameters[\"shape\"] = (100, 1) # based on the window size\n",
+    "hyperparameters[\"optimizer\"] = \"keras.optimizers.Adam\"\n",
+    "hyperparameters[\"learning_rate\"] = 0.0005\n",
+    "hyperparameters[\"latent_dim\"] = 20\n",
+    "hyperparameters[\"batch_size\"] = 64\n",
     "\n",
-    "tgan = TadGAN(**parameters)\n",
+    "tgan = TadGAN(**hyperparameters)\n",
     "tgan.fit(X)"
    ]
   },
