--- a/notebooks/Azure Analysis Example.ipynb
+++ b/notebooks/Azure Analysis Example.ipynb
@@ -137,8 +137,8 @@
     "        \"overlap_size\": 2640\n",
     "    },\n",
     "    \"orion.primitives.azure_anomaly_detector.detect_anomalies#1\": {\n",
-    "        \"subscription_key\": \"your-key-here\",\n",
-    "        \"endpoint\": \"your-endpoint-here\",\n",
+    "        \"subscription_key\": \"your-key-here\", # replace with your key\n",
+    "        \"endpoint\": \"your-endpoint-here\", # replace with your endpoint\n",
     "        \"overlap_size\": 2640,\n",
     "        \"interval\": 21600,\n",
     "        \"granularity\": \"hourly\",\n",
@@ -255,7 +255,7 @@
    "source": [
     "from orion.analysis import analyze\n",
     "\n",
-    "pipeline_path = '../orion/pipelines/azure.json'\n",
+    "pipeline_path = 'azure'\n",
     "\n",
     "anomalies = analyze(pipeline_path, data, hyperparams=hyperparameters)\n",
     "anomalies.head(5)"
