--- a/notebooks/CSV Analysis Example.ipynb
+++ b/notebooks/CSV Analysis Example.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "from orion.data import load_signal\n",
     "\n",
-    "signal_path = 'data/S-1.csv'\n",
+    "signal_path = 'S-1'\n",
     "\n",
     "data = load_signal(signal_path)\n",
     "data.head()"
@@ -158,8 +158,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1\n",
-      "9899/9899 [==============================] - 61s 6ms/step - loss: 0.0554 - mean_squared_error: 0.0554\n"
+      "Train on 7919 samples, validate on 1980 samples\n",
+      "Epoch 1/5\n",
+      "7919/7919 [==============================] - 35s 4ms/step - loss: 0.1959 - mse: 0.1959 - val_loss: 0.3439 - val_mse: 0.3439\n",
+      "Epoch 2/5\n",
+      "7919/7919 [==============================] - 34s 4ms/step - loss: 0.1915 - mse: 0.1915 - val_loss: 0.3147 - val_mse: 0.3147\n",
+      "Epoch 3/5\n",
+      "7919/7919 [==============================] - 34s 4ms/step - loss: 0.1909 - mse: 0.1909 - val_loss: 0.3534 - val_mse: 0.3534\n",
+      "Epoch 4/5\n",
+      "7919/7919 [==============================] - 34s 4ms/step - loss: 0.1873 - mse: 0.1873 - val_loss: 0.2893 - val_mse: 0.2893\n",
+      "Epoch 5/5\n",
+      "7919/7919 [==============================] - 34s 4ms/step - loss: 0.1891 - mse: 0.1891 - val_loss: 0.3037 - val_mse: 0.3037\n",
+      "9899/9899 [==============================] - 13s 1ms/step\n",
+      "9899/9899 [==============================] - 12s 1ms/step\n"
      ]
     },
     {
@@ -191,9 +202,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1398081600</td>\n",
-       "      <td>1399464000</td>\n",
-       "      <td>0.158533</td>\n",
+       "      <td>1228219200</td>\n",
+       "      <td>1229472000</td>\n",
+       "      <td>0.656399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1400587200</td>\n",
+       "      <td>1404172800</td>\n",
+       "      <td>0.166991</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -201,7 +218,8 @@
       ],
       "text/plain": [
        "        start         end     score\n",
-       "0  1398081600  1399464000  0.158533"
+       "0  1228219200  1229472000  0.656399\n",
+       "1  1400587200  1404172800  0.166991"
       ]
      },
      "execution_count": 3,
@@ -212,9 +230,16 @@
    "source": [
     "from orion.analysis import analyze\n",
     "\n",
-    "pipeline_path = '../orion/pipelines/lstm_dynamic_threshold.json'\n",
+    "hyperparameters = {\n",
+    "    'keras.Sequential.LSTMTimeSeriesRegressor#1': {\n",
+    "        'epochs': 5,\n",
+    "        'verbose': True\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "anomalies = analyze(pipeline_path, data)\n",
+    "pipeline = 'lstm_dynamic_threshold'\n",
+    "\n",
+    "anomalies = analyze(pipeline, data, hyperparams=hyperparameters)\n",
     "anomalies"
    ]
   }
@@ -235,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
