attend to comment

--- a/notebooks/OrionDBExplorer Tutorial.ipynb
+++ b/notebooks/OrionDBExplorer Tutorial.ipynb
@@ -216,10 +216,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6026e920b402c68ae42b1100</td>\n",
+       "      <td>602c91be219a13a319ca725c</td>\n",
        "      <td>my_username</td>\n",
        "      <td>Orion</td>\n",
-       "      <td>2021-02-12 20:46:24.656</td>\n",
+       "      <td>2021-02-17 03:47:10.234</td>\n",
        "      <td>Demo Dataset</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -228,7 +228,7 @@
       ],
       "text/plain": [
        "                 dataset_id   created_by entity             insert_time  \\\n",
-       "0  6026e920b402c68ae42b1100  my_username  Orion 2021-02-12 20:46:24.656   \n",
+       "0  602c91be219a13a319ca725c  my_username  Orion 2021-02-17 03:47:10.234   \n",
        "\n",
        "           name  \n",
        "0  Demo Dataset  "
@@ -356,33 +356,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6026e921b402c68ae42b1101</td>\n",
+       "      <td>602c91be219a13a319ca725d</td>\n",
        "      <td>my_username</td>\n",
        "      <td>orion-data/S-1.csv</td>\n",
-       "      <td>6026e920b402c68ae42b1100</td>\n",
-       "      <td>2021-02-12 20:46:24.924</td>\n",
+       "      <td>602c91be219a13a319ca725c</td>\n",
+       "      <td>2021-02-17 03:47:10.627</td>\n",
        "      <td>S-1</td>\n",
        "      <td>1222819200</td>\n",
        "      <td>1442016000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6026e921b402c68ae42b1103</td>\n",
+       "      <td>602c91be219a13a319ca725f</td>\n",
        "      <td>my_username</td>\n",
        "      <td>orion-data/P-1.csv</td>\n",
-       "      <td>6026e920b402c68ae42b1100</td>\n",
-       "      <td>2021-02-12 20:46:25.154</td>\n",
+       "      <td>602c91be219a13a319ca725c</td>\n",
+       "      <td>2021-02-17 03:47:10.920</td>\n",
        "      <td>P-1</td>\n",
        "      <td>1222819200</td>\n",
        "      <td>1468540800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6026e921b402c68ae42b1104</td>\n",
+       "      <td>602c91be219a13a319ca7260</td>\n",
        "      <td>my_username</td>\n",
        "      <td>orion-data/E-1.csv</td>\n",
-       "      <td>6026e920b402c68ae42b1100</td>\n",
-       "      <td>2021-02-12 20:46:25.168</td>\n",
+       "      <td>602c91be219a13a319ca725c</td>\n",
+       "      <td>2021-02-17 03:47:10.931</td>\n",
        "      <td>E-1</td>\n",
        "      <td>1222819200</td>\n",
        "      <td>1468951200</td>\n",
@@ -393,14 +393,14 @@
       ],
       "text/plain": [
        "                  signal_id   created_by       data_location  \\\n",
-       "0  6026e921b402c68ae42b1101  my_username  orion-data/S-1.csv   \n",
-       "1  6026e921b402c68ae42b1103  my_username  orion-data/P-1.csv   \n",
-       "2  6026e921b402c68ae42b1104  my_username  orion-data/E-1.csv   \n",
+       "0  602c91be219a13a319ca725d  my_username  orion-data/S-1.csv   \n",
+       "1  602c91be219a13a319ca725f  my_username  orion-data/P-1.csv   \n",
+       "2  602c91be219a13a319ca7260  my_username  orion-data/E-1.csv   \n",
        "\n",
        "                    dataset             insert_time name  start_time  \\\n",
-       "0  6026e920b402c68ae42b1100 2021-02-12 20:46:24.924  S-1  1222819200   \n",
-       "1  6026e920b402c68ae42b1100 2021-02-12 20:46:25.154  P-1  1222819200   \n",
-       "2  6026e920b402c68ae42b1100 2021-02-12 20:46:25.168  E-1  1222819200   \n",
+       "0  602c91be219a13a319ca725c 2021-02-17 03:47:10.627  S-1  1222819200   \n",
+       "1  602c91be219a13a319ca725c 2021-02-17 03:47:10.920  P-1  1222819200   \n",
+       "2  602c91be219a13a319ca725c 2021-02-17 03:47:10.931  E-1  1222819200   \n",
        "\n",
        "    stop_time  \n",
        "0  1442016000  \n",
@@ -457,7 +457,7 @@
    "source": [
     "from orion.analysis import get_available_templates\n",
     "\n",
-    "get_available_templates(None)"
+    "get_available_templates()"
    ]
   },
   {
