--- a/notebooks/Pipeline Scoring Example.ipynb
+++ b/notebooks/Pipeline Scoring Example.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "Afterwards, we pass the ground truth, the detected anomalies and the original data\n",
     "to the `orion.metrics.contextual_accuracy` and `orion.metrics.contextual_f1_score` functions in order\n",
-    "to compute a score that indicates how good our anomaly detection was:"
+    "to compute a score that indicates how good our anomaly detection was. You can read more about how to evaluate a pipeline [here](https://signals-dev.github.io/Orion/user_guides/evaluation_doc.html)."
    ]
   },
   {
